<resources>
    <string name="app_name">BakingApp</string>
    <string name="title_activity_recipe_detail">RecipeDetail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instructions">Instructions</string>
    <string name="previous_step">Previous Step</string>
    <string name="next_step">Next Step</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="auth">https</string>
    <string name="authority">d17h27t6h515a5.cloudfront.net</string>
    <string name="topher">topher</string>
    <string name="year">2017</string>
    <string name="month">May</string>
    <string name="link">59121517_baking</string>
    <string name="jsonname">baking.json</string>
    <string name="no_video_available">No Video Available</string>
</resources>
