<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeInstructions">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:text="@string/instructions"
    android:textStyle="bold"
    android:id="@+id/instruc"
    android:textSize="25sp"/>


    <com.google.android.exoplayer2.ui.PlayerView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/instruc"
        android:id="@+id/exo_player"
        android:layout_marginTop="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/no_video_available"
        android:layout_gravity="center"
        android:background="#ffff"
        android:textStyle="bold"
        android:id="@+id/no_video"
        android:textSize="25sp"/>

    </com.google.android.exoplayer2.ui.PlayerView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        android:background="@drawable/textview_shadow"
        android:id="@+id/instructions"

        android:textSize="20sp"
        android:padding="10dp"
        android:textColor="#000000"
        android:layout_below="@id/exo_player"
        android:layout_marginTop="10dp"/>



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/previous_step"
        android:layout_marginStart="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_chevron_left_black_24dp"
            android:id="@+id/back"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textStyle="bold"
            android:id="@+id/left_text"
            android:gravity="center"
            android:text="@string/previous_step"
            android:layout_toEndOf="@id/back"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Next_step"
        android:layout_marginEnd="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
       >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/next_text"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/next_step"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_chevron_right_black_24dp"
            android:id="@+id/next"
            android:layout_toEndOf="@id/next_text"
            />

    </RelativeLayout>
</RelativeLayout>